# src/server/static/openapi.yaml
@@ -249,7 +249,7 @@ paths:
       tags:
         - wallet
       summary: Withdraw
-      description: Witdhraw cash in USD
+      description: Withdraw cash in USD
       parameters:
         - in: header
           name: x-access-token
@@ -271,9 +271,7 @@ paths:
         '401':
           description: Unauthorized
         '409':
-          description: Invalid amount USD
-        '409':
-          description: Invalid amount BTC
+          description: Invalid amount
         '500':
           description: Internal server error
       security:
@@ -361,9 +359,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Transaction'
+                $ref: '#/components/schemas/Transactions'
         '401':
           description: Unauthorized
         '500':
@@ -435,6 +431,13 @@ components:
       required:
         - date
         - avg
+    Transactions:
+      type: object
+      properties:
+        transactions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Transaction'
     Transaction:
       type: object
       properties:
